[project]
name = "sentiment-analysis-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "emoji>=2.15.0",
    "fastapi>=0.135.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "textblob>=0.20.0",
    "uvicorn>=0.43.0",
]
